<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:background="#ed784a"
            android:padding="8dp"
            android:layout_marginBottom="4dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:background="#0f4761"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/viewProduct"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/view"
            android:background="#003366"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/editProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit"
            android:background="#d26a00"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/deleteProduct"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:background="#ff9f7f"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center">
        </TextView>
    </LinearLayout>

</LinearLayout>